0022693: Elimination Compiler warnings